# lsp-server

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DELIVERY_REPORT.md  DELIVERY_SUMMARY.md  DEVELOPMENT.md  FINAL_OVERVIEW.txt  LICENSE  Makefile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  USAGE.md  build.sh  go.mod  main.go  pyproject.toml  requirements.txt  run_test.sh  server.py  setup.py  test_client.py  test_server.sh
cmd/lsp-server/: main.go
document/: manager.go  manager_test.go
examples/: README.md  code_sample.py  sample.go  simple_client.py  test.txt  test_client.go
examples/vscode-extension/: README.md  extension.js  package.json
examples/vscode-extension/src/: extension.ts
handlers/: handlers.go  symbol_index.go  symbol_index_test.go
internal/jsonrpc/: message.go  message_test.go  rpc.go
internal/lsp/: lifecycle.go  protocol.go  server.go  server_test.go  textdocument.go
internal/protocol/: types.go
internal/server/: server.go  server_test.go
protocol/: messages.go
server/: document.go  server.go  server_test.go
