[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-lsp-server"
version = "0.1.0"
description = "A basic Language Server Protocol implementation using only Python standard library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
basic-lsp-server = "server:main"
